--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     </head>
     <body>
         <div class="container">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <p id="computer-choice">Computer: Bring it</p>
+            </div>
+            <div>
+                <button id="choice-btn" onclick="computerPlay()">Computer Choice</button>
+            </div>
+            <div>
+                <p id="result-field"></p>
+            </div>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
