--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="css/main.css" rel="stylesheet" type="text/css">
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
     </head>
     <body>
         <div class="container">
-            <div>
+            <div class="box">
                 <p id="computer-choice">Computer: Bring it</p>
             </div>
-            <div>
+            <div class="box">
                 <button id="choice-btn" onclick="computerPlay()">Computer Choice</button>
             </div>
-            <div>
+            <div class="box">
                 <p id="result-field"></p>
             </div>
         </div>
