Modified: index.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Rock Paper Scissors</h1>
-        <p>Result</p>
+        <p id="resultEl">Result</p>
         <p>Player's Score:</p>
         <p id="playerChoiceEl">Player's Choice: </p>
         <button id="playerRockBtn" onclick="rockChoice()">Rock</button>
