--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <p id="resultEl">Result</p>
         <p>Player's Score:</p>
         <p id="playerChoiceEl">Player's Choice: </p>
-        <button id="playerRockBtn" onclick="rockChoice()">Rock</button>
-        <button id="playerPaperBtn" onclick="paperChoice()">Paper</button>
-        <button id="playerScissorsBtn" onclick="scissorsChoice()">Scissors</button>
+        <button id="playerRockBtn" onclick="playerPlay(this.id)">Rock</button>
+        <button id="playerPaperBtn" onclick="playerPlay(this.id)">Paper</button>
+        <button id="playerScissorsBtn" onclick="playerPlay(this.id)">Scissors</button>
         <p>Computer's Score:</p>
         <p id="computerChoiceEl">Computer's Choice: </p>
         <button>Rock</button>
