Modified: index.js

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <body>
         <h1>Rock Paper Scissors</h1>
         <p id="resultEl">Result</p>
-        <p>Player's Score:</p>
+        <p id="playerScoreEl">Player's Score: 0</p>
         <p id="playerChoiceEl">Player's Choice: </p>
-        <button id="playerRockBtn" onclick="playerPlay(this.id)">Rock</button>
-        <button id="playerPaperBtn" onclick="playerPlay(this.id)">Paper</button>
-        <button id="playerScissorsBtn" onclick="playerPlay(this.id)">Scissors</button>
-        <p>Computer's Score:</p>
+        <button id="playerRockBtn" onclick="playerPlay(this.id)" class="btn">Rock</button>
+        <button id="playerPaperBtn" onclick="playerPlay(this.id)" class="btn">Paper</button>
+        <button id="playerScissorsBtn" onclick="playerPlay(this.id)" class="btn">Scissors</button>
+        <p id="computerScoreEl">Computer's Score: 0</p>
         <p id="computerChoiceEl">Computer's Choice: </p>
         <button>Rock</button>
         <button>Paper</button>
