Modified: main.css, index.html, index.js

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
-        <h1>Rock Paper Scissors</h1>
-        <p id="resultEl">Result</p>
-        <p id="playerScoreEl">Player's Score: 0</p>
-        <p id="playerChoiceEl">Player's Choice: </p>
-        <button id="playerRockBtn" onclick="playerPlay(this.id)" class="btn">Rock</button>
-        <button id="playerPaperBtn" onclick="playerPlay(this.id)" class="btn">Paper</button>
-        <button id="playerScissorsBtn" onclick="playerPlay(this.id)" class="btn">Scissors</button>
-        <p id="computerScoreEl">Computer's Score: 0</p>
-        <p id="computerChoiceEl">Computer's Choice: </p>
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
-        <script src="index.js"></script>
+        <div class="container">
+            <h1>Rock Paper Scissors</h1>  
+            <p id="resultEl">Result</p>
+            <div class="box">
+                <p id="playerScoreEl">Player's Score: 0</p>
+                <p id="playerChoiceEl">Player's Choice: </p>
+                <button id="btn playerRockBtn" onclick="playerPlay(this.id)">Rock</button>
+                <button id="btn playerPaperBtn" onclick="playerPlay(this.id)">Paper</button>
+                <button id="btn playerScissorsBtn" onclick="playerPlay(this.id)">Scissors</button>
+            </div>
+            <div class="box">
+                <p id="computerScoreEl">Computer's Score: 0</p>
+                <p id="computerChoiceEl">Computer's Choice: </p>
+                <button>Rock</button>
+                <button>Paper</button>
+                <button>Scissors</button>
+            </div>
+            <script src="index.js"></script>
+        </div>
     </body>
 </html>
