Modified: index.js

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="box">
                 <p id="playerScoreEl">Player's Score: 0</p>
                 <p id="playerChoiceEl">Player's Choice: </p>
-                <button id="btn playerRockBtn" onclick="playerPlay(this.id)">Rock</button>
-                <button id="btn playerPaperBtn" onclick="playerPlay(this.id)">Paper</button>
-                <button id="btn playerScissorsBtn" onclick="playerPlay(this.id)">Scissors</button>
+                <button id="playerRockBtn" enabled onclick="playerPlay(this.id)">Rock</button>
+                <button id="playerPaperBtn" enabled onclick="playerPlay(this.id)">Paper</button>
+                <button id="playerScissorsBtn" enabled onclick="playerPlay(this.id)">Scissors</button>
             </div>
             <div class="box">
                 <p id="computerScoreEl">Computer's Score: 0</p>
