Modified: index.js and index.html

--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
             <div class="box">
                 <p id="playerScoreEl">Player's Score: 0</p>
                 <p id="playerChoiceEl">Player's Choice: </p>
-                <button id="playerRockBtn" enabled onclick="playerPlay(this.id)">Rock</button>
-                <button id="playerPaperBtn" enabled onclick="playerPlay(this.id)">Paper</button>
-                <button id="playerScissorsBtn" enabled onclick="playerPlay(this.id)">Scissors</button>
+                <button id="playerRockBtn" onclick="playerPlay(this.id)">Rock</button>
+                <button id="playerPaperBtn" onclick="playerPlay(this.id)">Paper</button>
+                <button id="playerScissorsBtn" onclick="playerPlay(this.id)">Scissors</button>
             </div>
             <div class="box">
                 <p id="computerScoreEl">Computer's Score: 0</p>
                 <p id="computerChoiceEl">Computer's Choice: </p>
-                <button>Rock</button>
-                <button>Paper</button>
-                <button>Scissors</button>
             </div>
             <script src="index.js"></script>
         </div>
